<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BatteryInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="apps_from_am">AppsFromAm</string>
    <string name="apps_from_file">AppsFromFile</string>
    <string name="remove_task">RemoveTask</string>
    <string name="kill_process">KillProc</string>
    <string name="power_screen">显示屏</string>
    <string name="power_wifi">Wi-Fi</string>
    <string name="power_bluetooth">蓝牙</string>
    <string name="power_cell">手机信号</string>
    <string name="power_phone">语音通话</string>
    <string name="power_idle">手机待机</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="process_mediaserver_label">媒体服务器</string>
    <string name="battery_history_days"><xliff:g id="DAYS">%1$d</xliff:g> 天 <xliff:g id="HOURS">%2$d</xliff:g> 小时 <xliff:g id="MINUTES">%3$d</xliff:g> 分 <xliff:g id="SECONDS">%4$d</xliff:g> 秒</string>
    <string name="battery_history_hours"><xliff:g id="HOURS">%1$d</xliff:g> 小时 <xliff:g id="MINUTES">%2$d</xliff:g> 分 <xliff:g id="SECONDS">%3$d</xliff:g> 秒</string>
    <string name="battery_history_minutes"><xliff:g id="MINUTES">%1$d</xliff:g> 分 <xliff:g id="SECONDS">%2$d</xliff:g> 秒</string>
    <string name="battery_history_seconds"><xliff:g id="SECONDS">%1$d</xliff:g> 秒</string>
    <string name="battery_info_status_charging_ac">（交流电）</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">正在耗电</string>
    <string name="battery_info_status_not_charging">未在充电</string>
    <string name="battery_info_status_full">电量充足</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">正在充电</string>
    <string name="power_usage_level_and_status"><xliff:g id="LEVEL">%1$s</xliff:g> - <xliff:g id="STATUS">%2$s</xliff:g></string>

    <string name="accessibility_service_description">accessibility</string>
    <string name="apps_auto_boot">AppsAutoBoot</string>
    <string name="runningService">RunningService</string>
    <string name="runningFromLib">AppsFromLib</string>
    <string name="accessibility">accessibility</string>

</resources>