<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_apps_from_am"
        android:orderInCategory="100"
        android:title="@string/apps_from_am"/>
    <item
        android:id="@+id/menu_apps_from_file"
        android:orderInCategory="100"
        android:title="@string/apps_from_file"/>
    <item
        android:id="@+id/menu_apps_auto_boot"
        android:orderInCategory="100"
        android:title="@string/apps_auto_boot"/>
    <item
        android:id="@+id/menu_running_services"
        android:orderInCategory="100"
        android:title="@string/runningService"/>
    <item
        android:id="@+id/menu_apps_from_lib"
        android:orderInCategory="100"
        android:title="@string/runningFromLib"/>
    <item
        android:id="@+id/menu_remove_task"
        android:orderInCategory="100"
        android:title="@string/remove_task"/>
    <item
        android:id="@+id/menu_kill_process"
        android:orderInCategory="100"
        android:title="@string/kill_process"/>
    <item
        android:id="@+id/menu_accessibility"
        android:orderInCategory="100"
        android:title="@string/accessibility"/>

</menu>